miscellaneous bugfix & tweaks
nerfed vanilla Minecraft's excessive ticking compensation mechanism after lag; bugfix on boss rush bosses

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/setting.yml
@@ -37,7 +37,13 @@ miscSetting:
   summoningItemConsumption: false
   restartCountdown: 30
   restartCountdownInterval: 5
-  ammoConsumptionChanceMulti: 0.5
+  ammoConsumptionChanceMulti: 0.1
+  potionConsumptionChanceMulti: 0.2
+tickCompensationSetting:
+  triggerThreshold: 5
+  fastestTickInterval: 45
+  decayFactor: 0.5
+  bossFightOnly: false
 rarity:
   '-2': §#AAAAAA§l
   '-1': §#6B6B6B§l
