config file tweak
rebalanced several items, as well as buffing most ranger/mage projectiles' velocity

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -1218,7 +1218,7 @@ sets:
     - §a套装效果：
     - §a对敌人造成伤害时生成林海光球治疗你
     - §a速度提高5%
-    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a即将受到致命伤害时进入8秒始源林海无敌状态
     - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
     - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
     - §a对敌人造成魔法伤害后产生强大的自然能量爆炸，该效果有5秒冷却
@@ -1230,7 +1230,7 @@ sets:
     - §a套装效果：
     - §a对敌人造成伤害时生成林海光球治疗你
     - §a速度提高5%
-    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a即将受到致命伤害时进入8秒始源林海无敌状态
     - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
     - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
     - §a+4召唤栏并提高50%召唤伤害
@@ -1298,7 +1298,7 @@ sets:
     - §a魔法武器每1.25秒会发射一个灵魂射弹
     - §b-> §a继承自始源林海套装的效果：
     - §a对敌人造成伤害时生成林海光球治疗你
-    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a即将受到致命伤害时进入8秒始源林海无敌状态
     - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
     - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
     - §a对敌人造成魔法伤害后产生强大的自然能量爆炸，该效果有5秒冷却
@@ -1323,7 +1323,7 @@ sets:
     - §a在50%生命及以下获得40点防御和4点生命恢复
     - §b-> §a继承自始源林海套装的效果：
     - §a对敌人造成伤害时生成林海光球治疗你
-    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a即将受到致命伤害时进入8秒始源林海无敌状态
     - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
     - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
     attributes:
