--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -326,7 +326,7 @@ FURNACE:
     resultItem: 圣金源锭:5
     requireItem:
     - 圣金源矿:64
-    - 龙魂碎片
+    - 龙魂碎片:4
     recipeCategory: MATERIAL
   '49':
     requireLevel: 2
@@ -5011,7 +5011,6 @@ TINKER_WORKBENCH:
     requireItem:
     - 灾劫虚空
     - 焦热地狱
-    - 黑曜石头骨
     - 混乱核心
     - 熔渣锭:3
     - 魔鬼之庇护
