--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -2523,6 +2523,7 @@ Drew之翼:
   attributes:
     damageMulti: 0.15
     buffImmune: 硫磺火
+    buffInflict: 硫磺火|80|1
   worth: 12000000
   rarity: 8
 腐烂之脑:
@@ -7700,7 +7701,7 @@ P90:
 利维坦海潮枪:
   item: BLAZE_ROD
   lore:
-  - §r将火枪子弹转化为毒水弹
+  - §r将子弹转化为毒水弹
   attributes:
     damage: 270
     damageType: Bullet
@@ -13955,6 +13956,7 @@ Dodu的手炮:
   lore:
   - §b右键打开虚空袋
   - §b虚空袋中的弹药、药水、合成材料均可被直接使用
+  - §b可在设置里开关自动拾取物品功能
   worth: 2000000
   rarity: 3
 垃圾桶:
