improved DPS display and armor stand
the damage display also estimates the player's DPS; armor stands are introduced to help simulate the weapon's damage and hold equipment

--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -936,6 +936,14 @@
   - §7???
   - §6专家模式物品
   rarity: 1000
+盔甲架:
+  item: ARMOR_STAND
+  lore:
+  - §r右键在当前位置放置盔甲架
+  - §r可用于摆放装备和测试伤害
+  - §r盔甲架的护甲和伤害抗性一直保持为0
+  - §r被镐攻击时摧毁
+  rarity: 1
 可疑的眼球:
   item: CLAY_BALL
   lore:
