--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -966,12 +966,14 @@
 光明钥匙:
   item: SHEARS
   lore:
-  - §r“汇聚了大量灵魂的精华”
+  - §r汇聚了大量灵魂的精华
+  - §r“我刚关上的箱子……怎么可能是宝箱怪？”
   rarity: 5
 夜光钥匙:
   item: SHEARS
   lore:
-  - §r“汇聚了大量灵魂的精华”
+  - §r汇聚了大量灵魂的精华
+  - §r“好黑唷~好可怕唷~”
   rarity: 5
 明胶水晶:
   item: COAL
@@ -1003,6 +1005,7 @@
   lore:
   - §r在神庙使用召唤石巨人
   - §r附近世纪之花后玩家均可参与挑战
+  - §r“打碎它之后，石巨人就会送你离开迷宫”
   worth: 1000000
   rarity: 7
 天界符:
